# swiss

./: .gitignore  README.md  electron-builder.json5  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: build.yml
docs/: MIGRATION-NOTES.md
electron/: main.ts  preload.ts
electron/ipc/: binaries.ts  binary-manager.ts  converter.ts  dialogs.ts  downloader.ts  merge.ts
electron/lib/: binary-installer.ts  binary-resolver.ts  format.ts  platform.ts
mockups/: v6b-converter.html  v6b-downloader.html  v6b-settings.html
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  format.rs  lib.rs  main.rs  platform.rs  process_registry.rs  progress.rs  setup.rs
src-tauri/src/binary/: installer.rs  mod.rs  resolver.rs
src-tauri/src/commands/: binaries.rs  convert.rs  dialog.rs  download.rs  merge.rs  mod.rs  process.rs  shell.rs  updater.rs  window.rs
src/components/: binary-install-dialog.tsx  confirm-dialog.tsx  empty-queue.tsx  error-log.tsx  field-label.tsx  file-drop-zone.tsx  format-select.tsx  format-selects.tsx  job-actions.tsx  job-progress.tsx  job-queue.tsx  job-shell.tsx  navbar.tsx  pill-select.tsx  queue-actions-header.tsx  queue-bar.tsx  save-path-button.tsx  save-path-picker.tsx  update-banner.tsx  window-controls.tsx
src/lib/: constants.ts  debounced-storage.ts  ipc.ts  nav-items.ts  types.ts  url-validation.ts  utils.ts
(+37 files in other folders)
