[package]
name = "swiss"
version = "0.7.5"
description = "Desktop app for downloading videos and converting media files"
authors = ["pedro"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "swiss_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
flate2 = "1"
dirs = "6"
regex = "1"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
url = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
